添加混淆规则，完成根据组织查询联系人，操作记录接口调通，